fix: 重复定义了接口
