# doc/openapi.yaml
@@ -634,6 +634,30 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /user/admin/sign_in:
+        post:
+            tags:
+                - User
+            operationId: User_AdminSignIn
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/AdminSignInReq'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/UserSignInResp'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /user/get_info:
         get:
             tags:
@@ -667,6 +691,30 @@ paths:
                     application/json:
                         schema:
                             $ref: '#/components/schemas/UserSignInReq'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/UserSignInResp'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /user/student/sign_in:
+        post:
+            tags:
+                - User
+            operationId: User_StudentSignIn
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/StudentSignInReq'
                 required: true
             responses:
                 "200":
@@ -731,6 +779,18 @@ paths:
                                 $ref: '#/components/schemas/Status'
 components:
     schemas:
+        AdminSignInReq:
+            type: object
+            properties:
+                authType:
+                    type: integer
+                    format: int32
+                account:
+                    type: string
+                verifyCode:
+                    type: string
+                unitId:
+                    type: string
         AlarmRecord:
             type: object
             properties:
@@ -1537,6 +1597,18 @@ components:
                         $ref: '#/components/schemas/GoogleProtobufAny'
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+        StudentSignInReq:
+            type: object
+            properties:
+                authType:
+                    type: integer
+                    format: int32
+                code:
+                    type: string
+                verifyCode:
+                    type: string
+                unitId:
+                    type: string
         TTSApp:
             type: object
             properties:
